--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-08 Fri 14:02]
+#+CAPTION: Clock summary at [2019-02-08 Fri 16:01]
 | <75>                                       |          |        |        |       |
 | Headline                                   | Time     |        |        |     % |
 |--------------------------------------------+----------+--------+--------+-------|
-| *Total time*                               | *154:32* |        |        | 100.0 |
+| *Total time*                               | *156:29* |        |        | 100.0 |
 |--------------------------------------------+----------+--------+--------+-------|
-| Stories                                    | 154:32   |        |        | 100.0 |
-| Active                                     |          | 154:32 |        | 100.0 |
+| Stories                                    | 156:29   |        |        | 100.0 |
+| Active                                     |          | 156:29 |        | 100.0 |
 | Edit release notes for previous sprint     |          |        |   2:03 |   1.3 |
-| Sprint and product backlog grooming        |          |        |   3:50 |   2.5 |
-| Work on MASD theory                        |          |        | 113:38 |  73.5 |
+| Sprint and product backlog grooming        |          |        |   3:50 |   2.4 |
+| Work on MASD theory                        |          |        | 113:38 |  72.6 |
 | Rename models to fit MASD architecture     |          |        |   4:56 |   3.2 |
 | Read up on framework and API design        |          |        |   0:57 |   0.6 |
-| Analyse the state of the mess of refactors |          |        |   6:27 |   4.2 |
-| Create the =orchestration= model           |          |        |   4:15 |   2.8 |
-| Great meta-data rename                     |          |        |   4:54 |   3.2 |
-| Create a single binary for all of dogen    |          |        |   8:57 |   5.8 |
-| Update vcpkg across all operative systems  |          |        |   4:35 |   3.0 |
+| Analyse the state of the mess of refactors |          |        |   6:27 |   4.1 |
+| Create the =orchestration= model           |          |        |   4:15 |   2.7 |
+| Great meta-data rename                     |          |        |   4:54 |   3.1 |
+| Create a single binary for all of dogen    |          |        |  10:54 |   7.0 |
+| Update vcpkg across all operative systems  |          |        |   4:35 |   2.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -512,9 +512,9 @@ its not clear if its MASD or dogen.
 
   in fact, should we mention "tagged values" instead of "comment"?
 
-
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
+    CLOCK: [2019-02-08 Fri 14:03]--[2019-02-08 Fri 16:00] =>  1:57
     CLOCK: [2019-02-08 Fri 13:31]--[2019-02-08 Fri 13:40] =>  0:19
     CLOCK: [2019-02-07 Thu 16:20]--[2019-02-07 Thu 17:03] =>  0:43
     CLOCK: [2019-02-07 Thu 14:05]--[2019-02-07 Thu 15:40] =>  1:35
