--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-08 Fri 17:03]
+#+CAPTION: Clock summary at [2019-02-08 Fri 17:29]
 | <75>                                       |          |        |        |       |
 | Headline                                   | Time     |        |        |     % |
 |--------------------------------------------+----------+--------+--------+-------|
-| *Total time*                               | *157:12* |        |        | 100.0 |
+| *Total time*                               | *157:37* |        |        | 100.0 |
 |--------------------------------------------+----------+--------+--------+-------|
-| Stories                                    | 157:12   |        |        | 100.0 |
-| Active                                     |          | 157:12 |        | 100.0 |
+| Stories                                    | 157:37   |        |        | 100.0 |
+| Active                                     |          | 157:37 |        | 100.0 |
 | Edit release notes for previous sprint     |          |        |   2:03 |   1.3 |
 | Sprint and product backlog grooming        |          |        |   3:50 |   2.4 |
-| Work on MASD theory                        |          |        | 113:38 |  72.3 |
+| Work on MASD theory                        |          |        | 113:38 |  72.1 |
 | Rename models to fit MASD architecture     |          |        |   4:56 |   3.1 |
 | Read up on framework and API design        |          |        |   0:57 |   0.6 |
 | Analyse the state of the mess of refactors |          |        |   6:27 |   4.1 |
 | Create the =orchestration= model           |          |        |   4:15 |   2.7 |
 | Great meta-data rename                     |          |        |   4:54 |   3.1 |
-| Create a single binary for all of dogen    |          |        |  11:37 |   7.4 |
+| Create a single binary for all of dogen    |          |        |  12:02 |   7.6 |
 | Update vcpkg across all operative systems  |          |        |   4:35 |   2.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -514,6 +514,7 @@ its not clear if its MASD or dogen.
 
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
+    CLOCK: [2019-02-08 Fri 17:04]--[2019-02-08 Fri 17:29] =>  0:25
     CLOCK: [2019-02-08 Fri 16:20]--[2019-02-08 Fri 17:03] =>  0:43
     CLOCK: [2019-02-08 Fri 14:03]--[2019-02-08 Fri 16:00] =>  1:57
     CLOCK: [2019-02-08 Fri 13:31]--[2019-02-08 Fri 13:40] =>  0:19
