--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,24 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-08 Fri 17:29]
-| <75>                                       |          |        |        |       |
-| Headline                                   | Time     |        |        |     % |
-|--------------------------------------------+----------+--------+--------+-------|
-| *Total time*                               | *157:37* |        |        | 100.0 |
-|--------------------------------------------+----------+--------+--------+-------|
-| Stories                                    | 157:37   |        |        | 100.0 |
-| Active                                     |          | 157:37 |        | 100.0 |
-| Edit release notes for previous sprint     |          |        |   2:03 |   1.3 |
-| Sprint and product backlog grooming        |          |        |   3:50 |   2.4 |
-| Work on MASD theory                        |          |        | 113:38 |  72.1 |
-| Rename models to fit MASD architecture     |          |        |   4:56 |   3.1 |
-| Read up on framework and API design        |          |        |   0:57 |   0.6 |
-| Analyse the state of the mess of refactors |          |        |   6:27 |   4.1 |
-| Create the =orchestration= model           |          |        |   4:15 |   2.7 |
-| Great meta-data rename                     |          |        |   4:54 |   3.1 |
-| Create a single binary for all of dogen    |          |        |  12:02 |   7.6 |
-| Update vcpkg across all operative systems  |          |        |   4:35 |   2.9 |
+#+CAPTION: Clock summary at [2019-02-09 Sat 06:54]
+| <75>                                                 |          |        |        |       |
+| Headline                                             | Time     |        |        |     % |
+|------------------------------------------------------+----------+--------+--------+-------|
+| *Total time*                                         | *158:35* |        |        | 100.0 |
+|------------------------------------------------------+----------+--------+--------+-------|
+| Stories                                              | 158:35   |        |        | 100.0 |
+| Active                                               |          | 158:35 |        | 100.0 |
+| Edit release notes for previous sprint               |          |        |   2:03 |   1.3 |
+| Sprint and product backlog grooming                  |          |        |   4:02 |   2.5 |
+| Work on MASD theory                                  |          |        | 113:38 |  71.7 |
+| Rename models to fit MASD architecture               |          |        |   4:56 |   3.1 |
+| Read up on framework and API design                  |          |        |   0:57 |   0.6 |
+| Analyse the state of the mess of refactors           |          |        |   6:27 |   4.1 |
+| Create the =orchestration= model                     |          |        |   4:15 |   2.7 |
+| Update vcpkg across all operative systems            |          |        |   4:35 |   2.9 |
+| Great meta-data rename                               |          |        |   4:54 |   3.1 |
+| Create a single binary for all of dogen              |          |        |  12:02 |   7.6 |
+| Dogen's vcpkg export for OSX was created from master |          |        |   0:46 |   0.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -136,6 +137,8 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 *** STARTED Sprint and product backlog grooming                       :story:
      :LOGBOOK:
+     CLOCK: [2019-02-09 Sat 06:50]--[2019-02-09 Sat 06:54] =>  0:04
+     CLOCK: [2019-02-09 Sat 06:11]--[2019-02-09 Sat 06:19] =>  0:08
      CLOCK: [2019-02-08 Fri 13:41]--[2019-02-08 Fri 14:02] =>  0:21
      CLOCK: [2019-02-06 Wed 11:51]--[2019-02-06 Wed 12:10] =>  0:19
      CLOCK: [2018-11-22 Thu 10:21]--[2018-11-22 Thu 11:25] =>  1:01
@@ -444,6 +447,17 @@ that is then enriched for generation. This means we could have:
 - middleend/modeling
 - backend/generation
 
+*** COMPLETED Update vcpkg across all operative systems               :story:
+    CLOSED: [2019-02-09 Sat 06:46]
+    :LOGBOOK:
+    CLOCK: [2019-02-08 Fri 12:25]--[2019-02-08 Fri 13:30] =>  1:05
+    CLOCK: [2019-02-08 Fri 08:35]--[2019-02-08 Fri 12:05] =>  3:30
+    :END:
+
+Now that we have updated linux to latest vcpkg, we need to do the same
+for windows and osx. Hopefully latest boost.di and boost will fix the
+errors we are experiencing there.
+
 *** STARTED Great meta-data rename                                    :story:
     :LOGBOOK:
     CLOCK: [2018-11-26 Mon 10:01]--[2018-11-26 Mon 11:02] =>  1:01
@@ -574,15 +588,34 @@ the final binary should be called dogen or perhaps, =dogen.cli=. This
 fits in with other binaries such as =dogen.web=, =dogen.http=,
 =dogen.gui= etc.
 
-*** STARTED Update vcpkg across all operative systems                 :story:
+*** STARTED Dogen's vcpkg export for OSX was created from master      :story:
     :LOGBOOK:
-    CLOCK: [2019-02-08 Fri 12:25]--[2019-02-08 Fri 13:30] =>  1:05
-    CLOCK: [2019-02-08 Fri 08:35]--[2019-02-08 Fri 12:05] =>  3:30
+    CLOCK: [2019-02-09 Sat 06:20]--[2019-02-09 Sat 06:46] =>  0:26
+    CLOCK: [2019-02-09 Sat 05:50]--[2019-02-09 Sat 06:10] =>  0:20
     :END:
 
-Now that we have updated linux to latest vcpkg, we need to do the same
-for windows and osx. Hopefully latest boost.di and boost will fix the
-errors we are experiencing there.
+Problems:
+
+- we have built it from master instead of masd branch.
+- installing libodb et al. from master fails due to a config error. We
+  need to check that master has our fix. We need to check that the
+  config.h workaround works for OSX as well.
+- when building using the masd branch, we can't download ODB from git
+  due to a hash mismatch. This may be something to do with the git
+  version (2.7).
+
+*** Add option for northwind tests                                    :story:
+
+  At present, when we detect ODB and associated libraries, we build and
+  run the northwind tests. However, not all build agents have postgres
+  installed. We need an option that can be used to stop the inclusion of
+  the northwind tests - or ideally, to build the tests but not run it.
+
+*** Update dogen's windows vcpkg export                               :story:
+
+- ensure we built it from masd and not master
+- check master builds libodb 2.4
+- build libodb 2.5 from masd and re-export.
 
 *** Move top-level transforms into orchestration                      :story:
 
@@ -1465,3 +1498,32 @@ Unfortunately this will cause problems with the yarn names.
 Now we have dynamic transforms, we don't really need all the classlets
 we've created in fabric. We can get away with probably just the
 dynamic transform, calling all the factories.
+*** CANCELLED Keep track of sewing terms allocation                    :epic:
+    CLOSED: [2019-02-09 Sat 06:52]
+
+*Rationale*: we are no longer using sewing terms.
+
+This story just keeps track of how we are using the different sewing
+terms in Dogen. We are only tracking terms which are not yet
+incorporated into the product. It also keeps track of ideas that have
+not yet allocated a term.
+
+| Term   | Meaning | Dogen usage                                               |
+|--------+---------+-----------------------------------------------------------|
+| weave  |         | Reserved for AOP support?                                 |
+| [[https://en.wikipedia.org/wiki/Glossary_of_sewing_terms#D][dart]]   |         | Skeleton generator tool.                                  |
+| [[https://en.wikipedia.org/wiki/Yoke_(clothing)][yoke]]   |         |                                                           |
+| tailor |         | Format converter. e.g. Dia to JSON, etc.                  |
+| jersey |         | Code generation service.                                  |
+| hem    |         | HTTP Wrapper around jersey.                               |
+| twine  |         | Tool to infer model from XML/JSON/CSV instance documents. |
+|        |         | Tool to infer model from SQL database schemas.            |
+| pleat  |         |                                                           |
+
+*** CANCELLED Consider renaming LAM to a sewing term                  :story:
+    CLOSED: [2019-02-09 Sat 06:53]
+
+*Rationale*: we are no longer using sewing terms.
+
+In keeping with the rest of Dogen we should also use a sewing term for
+LAM. Wool is an interesting one.
