--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,25 +13,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-09 Sat 07:40]
+#+CAPTION: Clock summary at [2019-02-11 Mon 11:50]
 | <75>                                                 |          |        |        |       |
 | Headline                                             | Time     |        |        |     % |
 |------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                         | *159:20* |        |        | 100.0 |
+| *Total time*                                         | *164:38* |        |        | 100.0 |
 |------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                              | 159:20   |        |        | 100.0 |
-| Active                                               |          | 159:20 |        | 100.0 |
-| Edit release notes for previous sprint               |          |        |   2:03 |   1.3 |
-| Sprint and product backlog grooming                  |          |        |   4:02 |   2.5 |
-| Work on MASD theory                                  |          |        | 113:38 |  71.3 |
-| Rename models to fit MASD architecture               |          |        |   4:56 |   3.1 |
+| Stories                                              | 164:38   |        |        | 100.0 |
+| Active                                               |          | 164:38 |        | 100.0 |
+| Edit release notes for previous sprint               |          |        |   2:03 |   1.2 |
+| Sprint and product backlog grooming                  |          |        |   4:11 |   2.5 |
+| Work on MASD theory                                  |          |        | 113:38 |  69.0 |
+| Rename models to fit MASD architecture               |          |        |   4:56 |   3.0 |
 | Read up on framework and API design                  |          |        |   0:57 |   0.6 |
-| Analyse the state of the mess of refactors           |          |        |   6:27 |   4.0 |
-| Create the =orchestration= model                     |          |        |   4:15 |   2.7 |
-| Update vcpkg across all operative systems            |          |        |   4:35 |   2.9 |
-| Great meta-data rename                               |          |        |   4:54 |   3.1 |
-| Create a single binary for all of dogen              |          |        |  12:47 |   8.0 |
+| Analyse the state of the mess of refactors           |          |        |   6:27 |   3.9 |
+| Create the =orchestration= model                     |          |        |   4:15 |   2.6 |
+| Update vcpkg across all operative systems            |          |        |   4:35 |   2.8 |
+| Update C# reference models to latest dogen           |          |        |   0:42 |   0.4 |
+| Great meta-data rename                               |          |        |   4:54 |   3.0 |
+| Create a single binary for all of dogen              |          |        |  15:50 |   9.6 |
 | Dogen's vcpkg export for OSX was created from master |          |        |   0:46 |   0.5 |
+| Finish adding support for clang-cl builds            |          |        |   1:11 |   0.7 |
+| Convert the utility model into a regular dogen model |          |        |   0:13 |   0.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -137,6 +140,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 *** STARTED Sprint and product backlog grooming                       :story:
      :LOGBOOK:
+     CLOCK: [2019-02-11 Mon 11:28]--[2019-02-11 Mon 11:37] =>  0:09
      CLOCK: [2019-02-09 Sat 06:50]--[2019-02-09 Sat 06:54] =>  0:04
      CLOCK: [2019-02-09 Sat 06:11]--[2019-02-09 Sat 06:19] =>  0:08
      CLOCK: [2019-02-08 Fri 13:41]--[2019-02-08 Fri 14:02] =>  0:21
@@ -458,6 +462,15 @@ Now that we have updated linux to latest vcpkg, we need to do the same
 for windows and osx. Hopefully latest boost.di and boost will fix the
 errors we are experiencing there.
 
+*** COMPLETED Update C# reference models to latest dogen              :story:
+    CLOSED: [2019-02-11 Mon 09:08]
+    :LOGBOOK:
+    CLOCK: [2019-02-11 Mon 09:09]--[2019-02-11 Mon 09:25] =>  0:16
+    CLOCK: [2019-02-11 Mon 08:42]--[2019-02-11 Mon 09:08] =>  0:26
+    :END:
+
+At present the C# reference models do not work with latest dogen.
+
 *** STARTED Great meta-data rename                                    :story:
     :LOGBOOK:
     CLOCK: [2018-11-26 Mon 10:01]--[2018-11-26 Mon 11:02] =>  1:01
@@ -528,6 +541,8 @@ its not clear if its MASD or dogen.
 
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
+    CLOCK: [2019-02-11 Mon 10:01]--[2019-02-11 Mon 11:27] =>  1:26
+    CLOCK: [2019-02-09 Sat 16:38]--[2019-02-09 Sat 18:15] =>  1:37
     CLOCK: [2019-02-09 Sat 06:55]--[2019-02-09 Sat 07:40] =>  0:45
     CLOCK: [2019-02-08 Fri 17:04]--[2019-02-08 Fri 17:29] =>  0:25
     CLOCK: [2019-02-08 Fri 16:20]--[2019-02-08 Fri 17:03] =>  0:43
@@ -604,6 +619,46 @@ Problems:
 - when building using the masd branch, we can't download ODB from git
   due to a hash mismatch. This may be something to do with the git
   version (2.7).
+
+*** STARTED Finish adding support for clang-cl builds                 :story:
+    :LOGBOOK:
+    CLOCK: [2019-02-09 Sat 16:19]--[2019-02-09 Sat 16:37] =>  0:18
+    CLOCK: [2019-02-09 Sat 15:25]--[2019-02-09 Sat 16:18] =>  0:53
+    :END:
+
+We have added preliminary support for building with clang-cl on
+windows, but the build is not green. Most of the errors seem to be on
+boost.
+
+With boost 1.69 we now have mostly green builds. The only problem is
+that one of the ref impl tests is failing:
+
+: Running 1 test case...
+: unknown location(0): fatal error: in "boost_model_tests/validate_serialisation": class boost::archive::archive_exception: unregistered void cast class masd::cpp_ref_impl::boost_model::class_derived<-class masd::cpp_ref_impl::boost_model::class_base
+: ..\..\..\..\projects\masd.cpp_ref_impl.test_model_sanitizer\tests\boost_model_tests.cpp(56): last checkpoint: validate_serialisation
+:
+: *** 1 failure is detected in the test module "test_model_sanitizer_tests"
+
+Its not obvious why it is failing as the debug tests are passing. We
+should just open a story for this.
+
+Links:
+
+- [[https://ci.appveyor.com/project/mcraveiro/dogen/builds/19463961/job/6bnv6ppljlklu2ag][Release build]]
+- [[https://ci.appveyor.com/project/mcraveiro/dogen/builds/19463961/job/45yhn8sdhexvsdmi][Debug build]]
+- [[https://github.com/Kitware/CDash/issues/733][CDash reporting problems]]
+
+*** STARTED Convert the utility model into a regular dogen model      :story:
+    :LOGBOOK:
+    CLOCK: [2019-02-11 Mon 11:37]--[2019-02-11 Mon 11:50] =>  0:13
+    :END:
+
+Up to now we have manually created utility. However, as part of the
+CLI cleanup we should really have high-level constructs to represent
+logging etc. It makes no sense to create these types
+manually. Instead, we need to create a utility model and mark all of
+the existing types as either hand-crafted or regenerate them via dogen
+(for example for enums).
 
 *** Add option for northwind tests                                    :story:
 
