--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-11 Mon 11:50]
+#+CAPTION: Clock summary at [2019-02-11 Mon 12:11]
 | <75>                                                 |          |        |        |       |
 | Headline                                             | Time     |        |        |     % |
 |------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                         | *164:38* |        |        | 100.0 |
+| *Total time*                                         | *164:58* |        |        | 100.0 |
 |------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                              | 164:38   |        |        | 100.0 |
-| Active                                               |          | 164:38 |        | 100.0 |
+| Stories                                              | 164:58   |        |        | 100.0 |
+| Active                                               |          | 164:58 |        | 100.0 |
 | Edit release notes for previous sprint               |          |        |   2:03 |   1.2 |
 | Sprint and product backlog grooming                  |          |        |   4:11 |   2.5 |
-| Work on MASD theory                                  |          |        | 113:38 |  69.0 |
+| Work on MASD theory                                  |          |        | 113:38 |  68.9 |
 | Rename models to fit MASD architecture               |          |        |   4:56 |   3.0 |
 | Read up on framework and API design                  |          |        |   0:57 |   0.6 |
 | Analyse the state of the mess of refactors           |          |        |   6:27 |   3.9 |
@@ -34,7 +34,7 @@
 | Create a single binary for all of dogen              |          |        |  15:50 |   9.6 |
 | Dogen's vcpkg export for OSX was created from master |          |        |   0:46 |   0.5 |
 | Finish adding support for clang-cl builds            |          |        |   1:11 |   0.7 |
-| Convert the utility model into a regular dogen model |          |        |   0:13 |   0.1 |
+| Convert the utility model into a regular dogen model |          |        |   0:33 |   0.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -650,6 +650,7 @@ Links:
 
 *** STARTED Convert the utility model into a regular dogen model      :story:
     :LOGBOOK:
+    CLOCK: [2019-02-11 Mon 11:51]--[2019-02-11 Mon 12:11] =>  0:20
     CLOCK: [2019-02-11 Mon 11:37]--[2019-02-11 Mon 11:50] =>  0:13
     :END:
 
