utility: try to reduce warnings on clang-cl

--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,18 +13,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-12 Tue 18:29]
+#+CAPTION: Clock summary at [2019-02-12 Tue 18:43]
 | <75>                                                 |          |        |        |       |
 | Headline                                             | Time     |        |        |     % |
 |------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                         | *173:05* |        |        | 100.0 |
+| *Total time*                                         | *173:18* |        |        | 100.0 |
 |------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                              | 173:05   |        |        | 100.0 |
-| Active                                               |          | 173:05 |        | 100.0 |
+| Stories                                              | 173:18   |        |        | 100.0 |
+| Active                                               |          | 173:18 |        | 100.0 |
 | Edit release notes for previous sprint               |          |        |   2:03 |   1.2 |
 | Sprint and product backlog grooming                  |          |        |   4:11 |   2.4 |
-| Work on MASD theory                                  |          |        | 113:38 |  65.7 |
-| Rename models to fit MASD architecture               |          |        |   4:56 |   2.9 |
+| Work on MASD theory                                  |          |        | 113:38 |  65.6 |
+| Rename models to fit MASD architecture               |          |        |   4:56 |   2.8 |
 | Read up on framework and API design                  |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors           |          |        |   6:27 |   3.7 |
 | Create the =orchestration= model                     |          |        |   4:15 |   2.5 |
@@ -35,7 +35,7 @@
 | Create a single binary for all of dogen              |          |        |  15:50 |   9.1 |
 | Dogen's vcpkg export for OSX was created from master |          |        |   0:46 |   0.4 |
 | Finish adding support for clang-cl builds            |          |        |   1:30 |   0.9 |
-| Move generation properties into meta-data            |          |        |   0:54 |   0.5 |
+| Move generation properties into meta-data            |          |        |   1:07 |   0.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -671,6 +671,7 @@ Links:
 
 *** STARTED Move generation properties into meta-data                 :story:
     :LOGBOOK:
+    CLOCK: [2019-02-12 Tue 18:30]--[2019-02-12 Tue 18:43] =>  0:13
     CLOCK: [2019-02-12 Tue 17:35]--[2019-02-12 Tue 18:29] =>  0:54
     :END:
 
