--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,28 +13,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-12 Tue 18:43]
+#+CAPTION: Clock summary at [2019-02-13 Wed 10:03]
 | <75>                                                 |          |        |        |       |
 | Headline                                             | Time     |        |        |     % |
 |------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                         | *173:18* |        |        | 100.0 |
+| *Total time*                                         | *174:00* |        |        | 100.0 |
 |------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                              | 173:18   |        |        | 100.0 |
-| Active                                               |          | 173:18 |        | 100.0 |
+| Stories                                              | 174:00   |        |        | 100.0 |
+| Active                                               |          | 174:00 |        | 100.0 |
 | Edit release notes for previous sprint               |          |        |   2:03 |   1.2 |
-| Sprint and product backlog grooming                  |          |        |   4:11 |   2.4 |
-| Work on MASD theory                                  |          |        | 113:38 |  65.6 |
+| Sprint and product backlog grooming                  |          |        |   4:21 |   2.5 |
+| Work on MASD theory                                  |          |        | 113:38 |  65.3 |
 | Rename models to fit MASD architecture               |          |        |   4:56 |   2.8 |
 | Read up on framework and API design                  |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors           |          |        |   6:27 |   3.7 |
-| Create the =orchestration= model                     |          |        |   4:15 |   2.5 |
+| Create the =orchestration= model                     |          |        |   4:15 |   2.4 |
 | Update vcpkg across all operative systems            |          |        |   4:35 |   2.6 |
 | Update C# reference models to latest dogen           |          |        |   0:42 |   0.4 |
 | Convert the utility model into a regular dogen model |          |        |   7:27 |   4.3 |
+| Improve support for clang-cl builds                  |          |        |   2:02 |   1.2 |
 | Great meta-data rename                               |          |        |   4:54 |   2.8 |
 | Create a single binary for all of dogen              |          |        |  15:50 |   9.1 |
 | Dogen's vcpkg export for OSX was created from master |          |        |   0:46 |   0.4 |
-| Finish adding support for clang-cl builds            |          |        |   1:30 |   0.9 |
 | Move generation properties into meta-data            |          |        |   1:07 |   0.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -141,6 +141,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 *** STARTED Sprint and product backlog grooming                       :story:
      :LOGBOOK:
+     CLOCK: [2019-02-13 Wed 09:53]--[2019-02-13 Wed 10:03] =>  0:10
      CLOCK: [2019-02-11 Mon 11:28]--[2019-02-11 Mon 11:37] =>  0:09
      CLOCK: [2019-02-09 Sat 06:50]--[2019-02-09 Sat 06:54] =>  0:04
      CLOCK: [2019-02-09 Sat 06:11]--[2019-02-09 Sat 06:19] =>  0:08
@@ -491,6 +492,37 @@ manually. Instead, we need to create a utility model and mark all of
 the existing types as either hand-crafted or regenerate them via dogen
 (for example for enums).
 
+*** COMPLETED Improve support for clang-cl builds                     :story:
+    CLOSED: [2019-02-13 Wed 10:03]
+    :LOGBOOK:
+    CLOCK: [2019-02-13 Wed 09:20]--[2019-02-13 Wed 09:52] =>  0:32
+    CLOCK: [2019-02-12 Tue 08:28]--[2019-02-12 Tue 08:47] =>  0:19
+    CLOCK: [2019-02-09 Sat 16:19]--[2019-02-09 Sat 16:37] =>  0:18
+    CLOCK: [2019-02-09 Sat 15:25]--[2019-02-09 Sat 16:18] =>  0:53
+    :END:
+
+We have added preliminary support for building with clang-cl on
+windows, but the build is not green. Most of the errors seem to be on
+boost.
+
+With boost 1.69 we now have mostly green builds. The only problem is
+that one of the ref impl tests is failing:
+
+: Running 1 test case...
+: unknown location(0): fatal error: in "boost_model_tests/validate_serialisation": class boost::archive::archive_exception: unregistered void cast class masd::cpp_ref_impl::boost_model::class_derived<-class masd::cpp_ref_impl::boost_model::class_base
+: ..\..\..\..\projects\masd.cpp_ref_impl.test_model_sanitizer\tests\boost_model_tests.cpp(56): last checkpoint: validate_serialisation
+:
+: *** 1 failure is detected in the test module "test_model_sanitizer_tests"
+
+Its not obvious why it is failing as the debug tests are passing. We
+should just open a story for this.
+
+Links:
+
+- [[https://ci.appveyor.com/project/mcraveiro/dogen/builds/19463961/job/6bnv6ppljlklu2ag][Release build]]
+- [[https://ci.appveyor.com/project/mcraveiro/dogen/builds/19463961/job/45yhn8sdhexvsdmi][Debug build]]
+- [[https://github.com/Kitware/CDash/issues/733][CDash reporting problems]]
+
 *** STARTED Great meta-data rename                                    :story:
     :LOGBOOK:
     CLOCK: [2018-11-26 Mon 10:01]--[2018-11-26 Mon 11:02] =>  1:01
@@ -639,35 +671,6 @@ Problems:
 - when building using the masd branch, we can't download ODB from git
   due to a hash mismatch. This may be something to do with the git
   version (2.7).
-
-*** STARTED Finish adding support for clang-cl builds                 :story:
-    :LOGBOOK:
-    CLOCK: [2019-02-12 Tue 08:28]--[2019-02-12 Tue 08:47] =>  0:19
-    CLOCK: [2019-02-09 Sat 16:19]--[2019-02-09 Sat 16:37] =>  0:18
-    CLOCK: [2019-02-09 Sat 15:25]--[2019-02-09 Sat 16:18] =>  0:53
-    :END:
-
-We have added preliminary support for building with clang-cl on
-windows, but the build is not green. Most of the errors seem to be on
-boost.
-
-With boost 1.69 we now have mostly green builds. The only problem is
-that one of the ref impl tests is failing:
-
-: Running 1 test case...
-: unknown location(0): fatal error: in "boost_model_tests/validate_serialisation": class boost::archive::archive_exception: unregistered void cast class masd::cpp_ref_impl::boost_model::class_derived<-class masd::cpp_ref_impl::boost_model::class_base
-: ..\..\..\..\projects\masd.cpp_ref_impl.test_model_sanitizer\tests\boost_model_tests.cpp(56): last checkpoint: validate_serialisation
-:
-: *** 1 failure is detected in the test module "test_model_sanitizer_tests"
-
-Its not obvious why it is failing as the debug tests are passing. We
-should just open a story for this.
-
-Links:
-
-- [[https://ci.appveyor.com/project/mcraveiro/dogen/builds/19463961/job/6bnv6ppljlklu2ag][Release build]]
-- [[https://ci.appveyor.com/project/mcraveiro/dogen/builds/19463961/job/45yhn8sdhexvsdmi][Debug build]]
-- [[https://github.com/Kitware/CDash/issues/733][CDash reporting problems]]
 
 *** STARTED Move generation properties into meta-data                 :story:
     :LOGBOOK:
@@ -1508,6 +1511,29 @@ useful to make sure the source code matches the latest version of the
 diagram.
 
 We could use something like the [[https://code.google.com/p/dtl-cpp/wiki/Tutorial][DTL library]].
+
+*** Consider adding compiler name to package                          :story:
+
+At present we are not uploading clang packages into bintray. This is
+because they have the same name as the GCC and MSVC packages. If we
+add the compiler name to the package we can then upload them too. This
+would be good because we can then test to make sure all packages are
+working correctly.
+
+*** Fix clang-cl broken test                                          :story:
+
+We have one test failing on clang-cl, ref impl:
+
+: Running 1 test case...
+: unknown location(0): fatal error: in "boost_model_tests/validate_serialisation": class boost::archive::archive_exception: unregistered void cast class masd::cpp_ref_impl::boost_model::class_derived<-class masd::cpp_ref_impl::boost_model::class_base
+: ..\..\..\..\projects\masd.cpp_ref_impl.test_model_sanitizer\tests\boost_model_tests.cpp(56): last checkpoint: validate_serialisation
+:
+: *** 1 failure is detected in the test module "test_model_sanitizer_tests"
+
+It seems that the boost registration is failing on debug. This is very
+strange as it works on MSVC and Linux, release and debug but fails on
+clang-cl release.
+
 
 ** Deprecated
 *** CANCELLED Update =yarn.dia= traits to external                    :story:
