--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-13 Wed 10:03]
+#+CAPTION: Clock summary at [2019-02-13 Wed 11:04]
 | <75>                                                 |          |        |        |       |
 | Headline                                             | Time     |        |        |     % |
 |------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                         | *174:00* |        |        | 100.0 |
+| *Total time*                                         | *174:59* |        |        | 100.0 |
 |------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                              | 174:00   |        |        | 100.0 |
-| Active                                               |          | 174:00 |        | 100.0 |
+| Stories                                              | 174:59   |        |        | 100.0 |
+| Active                                               |          | 174:59 |        | 100.0 |
 | Edit release notes for previous sprint               |          |        |   2:03 |   1.2 |
-| Sprint and product backlog grooming                  |          |        |   4:21 |   2.5 |
-| Work on MASD theory                                  |          |        | 113:38 |  65.3 |
+| Sprint and product backlog grooming                  |          |        |   4:43 |   2.7 |
+| Work on MASD theory                                  |          |        | 113:38 |  64.9 |
 | Rename models to fit MASD architecture               |          |        |   4:56 |   2.8 |
 | Read up on framework and API design                  |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors           |          |        |   6:27 |   3.7 |
@@ -33,7 +33,7 @@
 | Convert the utility model into a regular dogen model |          |        |   7:27 |   4.3 |
 | Improve support for clang-cl builds                  |          |        |   2:02 |   1.2 |
 | Great meta-data rename                               |          |        |   4:54 |   2.8 |
-| Create a single binary for all of dogen              |          |        |  15:50 |   9.1 |
+| Create a single binary for all of dogen              |          |        |  16:27 |   9.4 |
 | Dogen's vcpkg export for OSX was created from master |          |        |   0:46 |   0.4 |
 | Move generation properties into meta-data            |          |        |   1:07 |   0.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
@@ -141,6 +141,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 *** STARTED Sprint and product backlog grooming                       :story:
      :LOGBOOK:
+     CLOCK: [2019-02-13 Wed 10:42]--[2019-02-13 Wed 11:04] =>  0:22
      CLOCK: [2019-02-13 Wed 09:53]--[2019-02-13 Wed 10:03] =>  0:10
      CLOCK: [2019-02-11 Mon 11:28]--[2019-02-11 Mon 11:37] =>  0:09
      CLOCK: [2019-02-09 Sat 06:50]--[2019-02-09 Sat 06:54] =>  0:04
@@ -593,6 +594,7 @@ its not clear if its MASD or dogen.
 
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
+    CLOCK: [2019-02-13 Wed 10:04]--[2019-02-13 Wed 10:41] =>  0:37
     CLOCK: [2019-02-11 Mon 10:01]--[2019-02-11 Mon 11:27] =>  1:26
     CLOCK: [2019-02-09 Sat 16:38]--[2019-02-09 Sat 18:15] =>  1:37
     CLOCK: [2019-02-09 Sat 06:55]--[2019-02-09 Sat 07:40] =>  0:45
